<resources>
    <string name="app_name">android_1</string>
    <string name="text">Java Guru</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration_form">Registration form</string>
    <string name="registration_first_name">First Name</string>
    <string name="registration_last_name">Last Name</string>
    <string name="registration_age">Age</string>
    <string name="registration_submit">Submit</string>
    <string name="registration_preferred_day_of_the_week">Preferred day of the week</string>
    <string name="registration_monday">Monday</string>
    <string name="registration_wednesday">Wednesday</string>
    <string name="registration_friday">Friday</string>
    <string name="registration_agree_to_terms">Agree to Terms</string>
    <string name="empty_email_error">Email is empty</string>
    <string name="empty_password_error">Password is empty</string>

    <string name="topPhotos">https://api.unsplash.com/photos/?client_id=311ed690d7678d20b8ce556e56d5bf168d6ddf9fa1126e58193d95089d796542</string>
    <string name="gifs">Gifs</string>
    <string name="photos">Photos</string>

    <string-array name="car_types">
        <item>Truck</item>
        <item>Sedan</item>
        <item>Van</item>
        <item>Coupe</item>
        <item>Wagon</item>
        <item>Convertible</item>
        <item>Crossover</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Close</string>
    <string name="share">Share</string>
    <string name="info">Info</string>
</resources>
