<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <include layout="@layout/header_layout"
        android:id="@+id/registration_header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_first_name" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/grey"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/registration_last_name"
                tools:ignore="TextViewEdits"/>

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/grey"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/registration_age"
                tools:ignore="TextViewEdits" />

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/grey"
                android:inputType="textPassword"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/registration_preferred_day_of_the_week"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/preferred_day">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/radioButtonMonday"
                    android:text="@string/registration_monday"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/radioButtonWednesday"
                    android:text="@string/registration_wednesday"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/radioButtonFriday"
                    android:text="@string/registration_friday"/>
            </RadioGroup>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:id="@+id/agreement"
                android:text="@string/registration_agree_to_terms"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/registration_submit"
                android:onClick="onSubmitClick"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>